fix: right align previous post text correctly on smaller screens

--- a/src/styles/layout/blog/post/_adjacent-navigation.scss
+++ b/src/styles/layout/blog/post/_adjacent-navigation.scss
@@ -35,5 +35,9 @@
         a:last-child {
             margin-top: 20px;
         }
+
+        .previous .adjacent-navigation {
+            justify-content: flex-end;
+        }
     }
 }
